samples/_failures_safe/1761501676_2c5104_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23554afa.c: In function ‘main’:
./samples/SAFE/__tmp_23554afa.c:164: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_23554afa.c:163:5: error: expected declaration or statement at end of input
  163 |     if
      |     ^~
